Added a fix... for xtend enabling the cppgen module to be merged into development.
The PermGen Space error reported by maven when running with PWith-Ide is due to extra usage by:

<groupId>org.eclipse.xtend</groupId>
<artifactId>xtend-maven-plugin</artifactId>

the bad thing is that xtend cannot be forked and therefore doesnt allow VM args to be specified.

Solution is to increase MaxPermSize for maven like:
export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=350m

This commit opdates the xtend version to 2.8.1 and disabled compilation of the module + then xtend processing unless the profile Pcppgen is activated (which should only be done if MAVEN_OPTS had been added the -XX:MaxPermSize=350m)