@@ -12,10 +12,11 @@
 
 	<groupId>org.overturetool.core.codegen</groupId>
 	<artifactId>cppgen</artifactId>
-	<name>The C++ Code Generator</name>
+	<name>The C++ Code Generator -- when using -Pcppgen and PWith-IDE then use: export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=350m"</name>
 
 	<properties>
 		<astcreator.version>1.6.4</astcreator.version>
+		<xtend.version>2.8.1</xtend.version>
 	</properties>
 
 	<dependencies>
@@ -52,7 +53,7 @@
 		<dependency>
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib</artifactId>
-			<version>2.7.3</version>
+			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.overturetool.core.codegen</groupId>
@@ -79,10 +80,10 @@
 			
 
 			
-			<plugin>
+			<!--plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
-				<version>2.7.3</version>
+				<version>${xtend.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -97,10 +98,79 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin-->
+			<plugin>
+          			<groupId>org.apache.maven.plugins</groupId>
+          			<artifactId>maven-compiler-plugin</artifactId>
+<executions>
+                <execution>
+                    <id>default-compile</id>
+                    <phase>none</phase>
+                </execution>
+            </executions>
+        		</plugin>
 		</plugins>
 
 		
 
 	</build>
+
+<profiles>
+	<profile>
+		<id>cppgen</id>
+
+  <build>
+                <plugins>
+
+  <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+<executions>
+                <execution>
+                    <id>default-compile</id>
+                    <phase>compile</phase>
+                </execution>
+            </executions>
+                        </plugin>
+
+
+  <plugin>
+                                <groupId>org.eclipse.xtend</groupId>
+                                <artifactId>xtend-maven-plugin</artifactId>
+                                <version>${xtend.version}</version>
+                                <executions>
+                                        <execution>
+                                                <goals>
+                                                        <goal>compile</goal>
+                                                        <goal>testCompile</goal>
+                                                </goals>
+                                                <configuration>
+                                        
+                                                        
+ <outputDirectory>${project.build.directory}/xtend-gen/main</outputDirectory>
+
+                                                        <testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
+
+                                                </configuration>
+                                        </execution>
+                                </executions>
+                        </plugin>
+                </plugins>
+
+
+
+        </build>
+
+
+
+
+
+	</profile>
+
+
+
+
+
+</profiles>
+
 </project>
